Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2013-02-07 (SVN):
    * made safe_malloc() of timidity actually safe: it relies on setjmp
      and longjmp using a jmp_buf private to timidity. safe_malloc() is
      now used only after doing a setjmp(), otherwise we directly use
      malloc() and check its return. safe_malloc() does a longjmp() upon
      allocation failure: during timidity initialization, jump point is
      either mid_init_no_config() or read_config_file(), and a failure
      results in a mid_exit() to free all the allocated memory until
      that point. if initialization is successful, then safe_malloc() is
      used during song loading and a failure jumps to mid_song_load()
      resulting in a mid_song_free() to free all memory allocated for
      the song until that point. all functions returning safe_malloc'ed
      local pointer variables are converted to work properly in case of
      a longjmp(). all NULL checks for pointers returned by safe_malloc
      are removed.
    * updated version date stamp to 2013-02-07.

2013-02-05 (SVN):
    * timidity, intrum_dls.c: apply the same one extra sample space fix
      from r5049-r5050 to load_region_dls() to cure memory error reports
      from valgrind. removed a comment from instrum.c:free_bank() which
      is no longer valid. minor tidy-ups here and there.

2013-02-05 (SVN):
    * added Siggi's initial software renderer 2D scaling implementation
      among the optional patches.

2013-02-05 (SVN):
    * draw.c (Draw_Character,Draw_SmallCharacter,Draw_TransPicCropped):
      take the trans_level check out of the loops, evaluating it only
      once instead of every iteration.
    * updated version date stamp to 2013-02-05.

2013-02-04 (SVN):
    * updated config.guess and config.sub from savannah git repo.
    * updated version date stamp to 2013-02-04.

2013-02-04 (SVN):
    * finalize the malloc() safety in timidity: instrum_dls.c still has