@@ -4,6 +4,11 @@ Development Progress	:
 ---------------------------
 
 2013-02-07 (SVN):
+    * snd_timidity.c: dls support, mostly for my testing purposes. built
+      only when TIMIDITY_USE_DLS is defined (see the Makefile), which is
+      not enabled by default.
+
+2013-02-07 (SVN):
     * made safe_malloc() of timidity actually safe: it relies on setjmp
       and longjmp using a jmp_buf private to timidity. safe_malloc() is
       now used only after doing a setjmp(), otherwise we directly use
